--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WIA2007_ZeroHunger</string>
+    <string name="info">Click image for more info</string>
+    <string name="weather_info">Weather ForeCast</string>
+    <string name="soil_info">Soil Analysis</string>
 </resources>
