--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="DFAP_Financial_Aid_Slots">FinancialAidSlots</string>
     <string name="DFAP_Financial_Aid_Dateline">FinancialAidDateline</string>
     <string name="DFAP_Financial_Aid_Image">FinancialAidImage</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
