--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">WIA2007_ZeroHunger</string>
     <string name="info">Click image for more info</string>
-    <string name="weather_info">Weather ForeCast</string>
-    <string name="soil_info">Soil Analysis</string>
+    <string name="weather_info">Weather\nForeCast</string>
+    <string name="soil_info">Soil\nAnalysis</string>
     <string name="title_activity_google_map_p2">GoogleMap_P2</string>
     <string name="DFAP_Financial_Aid_Name">FinancialAidName</string>
     <string name="DFAP_Financial_Aid_Amount">FinancialAidAmount</string>
