--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,92 @@
     <string name="weather_info">Weather\nForeCast</string>
     <string name="soil_info">Soil\nAnalysis</string>
     <string name="title_activity_google_map_p2">GoogleMap_P2</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_settings">Settings</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+    <string-array name="criterion_choices">
+        <item>Months</item>
+        <item>Amount</item>
+    </string-array>
+    <string name="lorem_ipsum">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
+        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
+        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
+        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
+        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
+        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
+        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
+        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
+        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
+        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
+        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
+        bibendum, vel congue leo egestas.\n\n
+        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
+        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
+        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
+        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
+        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
+        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
+        est.\n\n
+        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
+        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
+        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
+        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
+        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
+        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
+        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
+        convallis.\n\n
+        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
+        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
+        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
+        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
+        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
+        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
+        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
+    </string>
+    <string name="homepage_pass">PASS</string>
+    <string name="homepage_prosperity_assistance_and_support_service">Prosperity Assistance and Support Service</string>
+    <string name="homepage_direct_financial_aid_platform">Direct Financial Aid Platform</string>
+    <string name="homepage_finance_management_tools">Finance Management Tools</string>
+    <string name="homepage_food_bank_and_shelter_location">Food Bank and Shelter Location</string>
+    <string name="DFAP_direct_financial_aid_platform">Direct Financial Aid Platform</string>
+    <string name="DFAP_offerings_of_financial_aid">Offerings of Financial Aid</string>
+    <string name="Apply">Apply</string>
+    <string name="Back">Back</string>
+    <string name="Sort">Sort</string>
+    <string name="Select">Select</string>
+    <string name="Discover_More">Discover more</string>
     <string name="DFAP_Financial_Aid_Name">FinancialAidName</string>
     <string name="DFAP_Financial_Aid_Amount">FinancialAidAmount</string>
     <string name="DFAP_Financial_Aid_Slots">FinancialAidSlots</string>
     <string name="DFAP_Financial_Aid_Dateline">FinancialAidDateline</string>
     <string name="DFAP_Financial_Aid_Image">FinancialAidImage</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="FinancialManagementTools">FinancialAidImage</string>
+    <string name="DFAP_Listings_Of_Financial_Aid_Found">Listings of Financial Aid Found</string>
+    <string name="RM0">RM0</string>
+    <string name="FMT_Financial_Dashboard">Financial Dashboard</string>
+    <string name="FMT_Expenses">Expenses:</string>
+    <string name="FMT_Income">Income:</string>
+    <string name="FMT_Net_Profit">Net Profit:</string>
+    <string name="FinancialDashboard_FinancialManagementTools">Financial Management Tools</string>
+    <string name="FMT_RM0">RM0</string>
+    <string name="FMT_Financial_Management_Tools">Financial Management Tools</string>
+    <string name="Direct_Financial_Aid_Platform">Direct Financial Aid Platform</string>
+    <string name="DFAP_Question_do_you_wish_to_apply_nfor_the_financial_aid">Do you wish to apply\nfor the financial aid?</string>
+    <string name="DFAP_Yes">Yes</string>
+    <string name="DFAP_No">No</string>
+    <string name="Total_Amount">Total Amount</string>
+    <string name="Amount_Of_Slots">Amount of Slots</string>
+    <string name="Select_Amount_Slots_Text">Select the amount of slots.</string>
+    <string name="Type_Your_Message">Type your message...</string>
+    <string name="Tax_Calculator">Tax\nCalculator</string>
+    <string name="Insurance_Calculator">Insurance\nCalculator</string>
+    <string name="Savings_Guide">Savings\nGuide</string>
+    <string name="AI_Finance_nChatbot">AI Finance\nChatbot</string>
+    <string name="ZeroHungerHub_Logo">ZeroHungerHub Logo</string>
 </resources>
